<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="175dp"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:fontFamily="@font/roboto"
        android:labelFor="@id/editTextTextEmailAddress"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcome" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textLogin"
        tools:ignore="Autofill,ExtraText" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:fontFamily="@font/roboto"
        android:labelFor="@id/editTextNumberPassword"
        android:text="@string/password"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="255dp"
        android:layout_height="65dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword"
        tools:ignore="Autofill,ExtraText" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:backgroundTint="#3F51B5"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/enter"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/buttonPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberPassword" />

    <Button
        android:id="@+id/buttonPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:background="@android:color/background_light"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#3949AB"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAccess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonAccess"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="175dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/background_light"
        android:backgroundTint="#00FFFFFF"
        android:fontFamily="@font/roboto_italic"
        android:text="@string/access"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#3949AB"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPassword"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>