<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textBoasVindas"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="71dp"
        android:fontFamily="@font/roboto_italic"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#5E35B1"
        android:minHeight="2dp"
        app:layout_constraintBottom_toTopOf="@+id/textDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBoasVindas" />

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="316dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="73dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="8sp"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/imageFilterView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imageFilterView"
        android:layout_width="151dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textDescription2"
        app:layout_constraintEnd_toStartOf="@+id/textImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textImg"
        android:layout_width="98dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="8dp"
        android:text="@string/img_alt"
        app:layout_constraintBottom_toTopOf="@+id/textDescription2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageFilterView"
        app:layout_constraintTop_toBottomOf="@+id/textDescription"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textDescription2"
        android:layout_width="317dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="73dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="8sp"
        android:text="@string/description"
        android:textAlignment="textStart"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterView" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/next"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription2" />
</androidx.constraintlayout.widget.ConstraintLayout>